# Coursework-CloudProgramming

./: .gitignore  .gitmodules
chord-part-1/chord/: Makefile  README.md  meson.build
chord-part-1/chord/src/: chord.cc  chord.h  rpcs.h
chord-part-1/chord/test/: run.sh  test_part_1.py  test_part_1.sh  test_part_2.py  test_part_2.sh  test_part_3-1.py  test_part_3-2.py  test_part_3.sh  test_script.py
chord-part-1/chord/test/logs/: test_part_1.txt  test_part_2.txt  test_part_3-1.txt  test_part_3-2.txt
chord-part-2/: test_download.py  upload.py
chord-part-2/app/: build-and-push.sh  build_and_push.sh  chord-svc.yaml  chord.yaml  deploy.sh  restart-pods.sh  restart_pods.sh
chord-part-2/app/chord/: Dockerfile
chord-part-2/app/core/: chord-svc.yaml  chord.yaml
chord-part-2/app/core/init/: Dockerfile  init.py
chord-part-2/app/init/: Dockerfile  _dbg.py  dbgutils.py  init.py
chord-part-2/app/server/: server.yaml
chord-part-2/app/server/fileserver/: Dockerfile  fileserver.py
chord-part-2/app/uploadserver/: Dockerfile
chord-part-2/autoscale/: chord-hpa.yaml  deploy.sh  prometheus-adapter-config.yaml
chord-part-2/aws/: chord-eks.yaml  create-cluster.sh  delete-cluster.sh
chord-part-2/configs/: local-pv.yaml
chord-part-2/debug/: nslookup.sh
chord-part-2/debug/client/: Dockerfile  run.sh  upload.py
chord-part-2/minikube/: launch.sh
chord-part-2/scripts/: download.py  local_cluster.sh  requirements.txt  test_upload.py
lab1/: docker-compose.yml
lab1/client/: Dockerfile  client.py
lab1/server/: Dockerfile  server.py
(+6 files in other folders)
